<resources>
    <string name="app_name">TripPlanner</string>

    <string name="title_activity_trip">Trip Activity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Renter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="register_txt">Don\'t have account?,Register</string>
    <string name="login_txt">Already have account?,Login</string>

    <string name="save">save</string>
    <string name="new_trip">New Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_description">description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="one_direction">One Direction</string>
    <string name="round_trip">Round Trip</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_up_coming">Trips</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_logout">Logout</string>

    <string name="trip_state_up_coming">Upcoming</string>
    <string name="trip_state_done">Done</string>
    <string name="trip_state_cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Your Password ?</string>
    <string name="send_email">Send Email</string>
    <string name="send_vaild_email">Write a valid Email to send you a new password</string>


</resources>
