<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.waleed.tripplanner.view.fragments.UpcomingTripFragment"
        android:label="@string/menu_up_coming"
        tools:layout="@layout/fragment_upcoming_trip" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.waleed.tripplanner.view.fragments.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.waleed.tripplanner.view.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.waleed.tripplanner.view.fragments.SyncFragment"
        android:label="@string/menu_sync"
        tools:layout="@layout/fragment_sync" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.waleed.tripplanner.view.fragments.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>