<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activities.TripActivity"
    tools:showIn="@layout/activity_trip">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/trip_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@+id/directionLayout"
            app:layout_constraintStart_toStartOf="@+id/directionLayout"
            app:layout_constraintTop_toBottomOf="@+id/directionLayout">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_event_black_24dp"
                android:padding="4dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:padding="4dp"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/directionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_name"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_name"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name">

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:gravity="center|start"
                android:padding="4dp"
                android:text="@string/from" />

            <TextView
                android:id="@+id/textViewTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:gravity="center|start"
                android:padding="4dp"
                android:text="@string/to" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/dateTimeLayout"
            app:layout_constraintStart_toStartOf="@+id/dateTimeLayout"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/type" />

            <RadioGroup
                android:layout_width="0dp"
                android:id="@+id/radioGroupType"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="2.5"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="2">


                <RadioButton
                    android:id="@+id/radioOneDirection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one_direction" />

                <RadioButton
                    android:id="@+id/radioRoundTrip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/round_trip" />
            </RadioGroup>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/trip_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/typeLayout"
            app:layout_constraintStart_toStartOf="@+id/typeLayout"
            app:layout_constraintTop_toBottomOf="@+id/typeLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>